# photoarch

./: .gitignore  README.md  constants.py  helpers.py  photoarch.py  pyproject.toml  pytest.ini  requirements.txt  sort-photos.py
.github/workflows/: test.yml
photoarch/: __init__.py  __main__.py  ai_models_context.py  config.py  device_utils.py  helpers.py  logging_config.py  main.py  models.py
photoarch/analysis/: ai_captioning.py  ai_captioning_blip2.py  ai_captioning_git.py  ai_captioning_llava.py  ai_pipeline.py  caption_generator.py  caption_generator_factory.py  exif_reader.py  file_analyzer.py  image_embedder.py  semantic_similarity.py
photoarch/fileops/: file_utils.py  folder_builder.py  keyword_reducer.py
photoarch/language/: caption_comparer.py  keyword_generator.py  keyword_reducer.py
photoarch/services/: geocoding.py  semantic_similarity.py  translate.py
tests/: test_ai_captioning.py  test_ai_pipeline.py  test_caption_comparer.py  test_device_utils.py  test_exif_reader.py  test_file_analyzer.py  test_file_utils.py  test_folder_builder.py  test_geocoding.py  test_image_embedder.py  test_integration.py  test_integration_blip2.py  test_keyword_generator.py  test_keyword_reducer.py  test_language.py  test_semantic_similarity.py  test_translate.py
