[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoarch"
version = "0.1.0"
description = "AI-powered photo organizer by date, location and content."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Christian Kadluba"}
]
requires-python = ">=3.14"
keywords = ["photo", "organizer", "exif", "ai", "archiving", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

dependencies = [
    "accelerate",
    "open-clip-torch",
    "Pillow",
    "torch",
    "torchvision",
    "transformers",
    "sentence-transformers",
    "deep-translator",
    "requests",
    "colorlog",
    "geopy",
    "dataclasses-json",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[project.scripts]
photoarch = "photoarch.main:cli"

[project.urls]
Homepage = "https://github.com/ckadluba/photoarch"
Repository = "https://github.com/ckadluba/photoarch"
Issues = "https://github.com/ckadluba/photoarch/issues"

[project]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["photoarch*"]

[tool.setuptools.package-data]
photoarch = ["py.typed"]
