[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoarch"
version = "0.1.0"
description = "AI-powered photo organizer by date, location and content."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Christian Kadluba"}
]
requires-python = ">=3.14"
keywords = ["photo", "organizer", "exif", "ai", "archiving", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

dependencies = [
    "accelerate",
    "open-clip-torch",
    "Pillow==12.1.1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.9.0",
    "sentence-transformers==5.3.0",
    "deep-translator==1.11.4",
    "requests==2.32.5",
    "colorlog==6.10.1",
    "geopy==2.4.1",
    "dataclasses-json==0.6.7",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[project.scripts]
photoarch = "photoarch.main:cli"

[project.urls]
Homepage = "https://github.com/ckadluba/photoarch"
Repository = "https://github.com/ckadluba/photoarch"
Issues = "https://github.com/ckadluba/photoarch/issues"

[tool.setuptools.packages.find]
include = ["photoarch*"]

[tool.setuptools.package-data]
photoarch = ["py.typed"]
